# ai-devops-bot

./: .gitignore  README.md  __init__.py  ai_coding_demo.json  main.py  pyproject.toml
agents/: __init__.py  code_explorer.py  dev_env.py  docs_logger.py  git_ops.py  implementation.py  repo_scout.py
bot/: classifier.py  reporter.py
config/: settings.py
core/: llm_client.py  orchestrator.py  utils.py
tests/: __init__.py  test_config.py  test_implementation.py  test_llm_client.py  test_utils.py
